--- a/src/index.css
+++ b/src/index.css
@@ -55,11 +55,18 @@ input:focus::placeholder {
 }
 
 h1 {
-  font-size: 5em;
+  font-size: 3em;
 }
 
 .general_grid {
   display: flex;
   flex-wrap: wrap;
   width: 80%;
+}
+
+.card {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  margin: 0.5em;
+  border-radius: 10px;
 }
